//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table users {
  id Int [pk, increment]
  email String [unique, not null]
  name String
  password String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  images images [not null]
  albums albums [not null]
  tags tags [not null]
  favorites favorites [not null]
}

Table images {
  id String [pk]
  key String [unique, not null]
  accessGrantType ResourceAccessGrantType [not null, default: 'PRIVATE']
  description String
  metadata Json
  movedToTrash Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  ownerId Int [not null]
  owner users [not null]
  albums albums [not null]
  tags tags [not null]
  favorites favorites [not null]
}

Table albums {
  id String [pk]
  title String [not null]
  accessGrantType ResourceAccessGrantType [not null, default: 'PRIVATE']
  movedToTrash Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  ownerId Int [not null]
  owner users [not null]
  images images [not null]
}

Table tags {
  id String [pk]
  key String [unique, not null]
  label String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  ownerId Int
  owner users
  images images [not null]
}

Table favorites {
  userId Int [not null]
  imageId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user users [not null]
  image images [not null]

  indexes {
    (userId, imageId) [pk]
  }
}

Table albums_images {
  albumsId String [ref: > albums.id]
  imagesId String [ref: > images.id]
}

Table images_tags {
  tagsId String [ref: > tags.id]
  imagesId String [ref: > images.id]
}

Enum ResourceAccessGrantType {
  PRIVATE
  PUBLIC
}

Ref: images.ownerId > users.id [delete: Cascade]

Ref: albums.ownerId > users.id [delete: Cascade]

Ref: tags.ownerId > users.id [delete: Cascade]

Ref: favorites.userId > users.id [delete: Cascade]

Ref: favorites.imageId > images.id [delete: Cascade]